@startuml Database ER Diagram - GupShup Cafe

!define RECTANGLE class

skinparam backgroundColor #FFFFFF
skinparam classBackgroundColor #E8F4F8
skinparam classBorderColor #4A90E2

title GupShup Cafe - Enhanced Database ER Diagram

entity "sessions" as sessions {
    * **id** : TEXT <<PK>>
    --
    room_id : TEXT <<NOT NULL>>
    topic_title : TEXT
    topic_category : TEXT
    participant_count : INTEGER
    started_at : DATETIME
    ended_at : DATETIME
    duration_seconds : INTEGER
    rounds_completed : INTEGER
    created_at : DATETIME <<DEFAULT NOW>>
}

entity "participants" as participants {
    * **id** : TEXT <<PK>>
    --
    * session_id : TEXT <<FK>>
    user_id : TEXT
    anonymous_name : TEXT
    campus : TEXT
    location : TEXT
    joined_at : DATETIME
    left_at : DATETIME
    speaking_time_seconds : INTEGER <<DEFAULT 0>>
}

entity "topics" as topics {
    * **id** : INTEGER <<PK, AUTO>>
    --
    * title : TEXT <<NOT NULL>>
    description : TEXT
    category : TEXT
    source : TEXT <<DEFAULT 'fallback'>>
    used_count : INTEGER <<DEFAULT 0>>
    created_at : DATETIME <<DEFAULT NOW>>
}

entity "progress" as progress {
    * **id** : TEXT <<PK>>
    --
    user_id : TEXT <<UNIQUE>>
    cefr_level : TEXT
    topics_of_interest : TEXT
    last_updated : DATETIME
    feedback_history : TEXT <<JSON>>
}

entity "feedback" as feedback {
    * **id** : TEXT <<PK>>
    --
    * participant_id : TEXT <<FK>>
    * session_id : TEXT <<FK>>
    feedback_text : TEXT
    feedback_type : TEXT
    cefr_assessment : TEXT
    grammar_corrections : TEXT <<JSON>>
    vocabulary_suggestions : TEXT <<JSON>>
    timestamp : DATETIME <<DEFAULT NOW>>
}

' Relationships
sessions ||--o{ participants : "has many"
sessions ||--o{ feedback : "generates"
participants ||--o{ feedback : "receives"
topics ||--o| sessions : "used in"

' Additional entities for future features
entity "user_profiles" as users {
    * **id** : TEXT <<PK>>
    --
    name : TEXT
    email : TEXT <<UNIQUE>>
    campus : TEXT
    location : TEXT
    created_at : DATETIME
    last_login : DATETIME
}

users ||--o{ participants : "participates as"
users ||--|| progress : "has"

note right of sessions
    **Primary table for discussion sessions**
    
    Stores:
    - Session metadata
    - Timing information
    - Completion statistics
    
    Indexed on:
    - room_id
    - created_at
    - topic_category
end note

note right of participants
    **Tracks individual participation**
    
    Links users to sessions
    Records:
    - Anonymous identities
    - Join/leave times
    - Speaking duration
    
    Indexed on:
    - session_id
    - user_id
end note

note bottom of topics
    **Topic management**
    
    Sources:
    - 'ai': Generated by AI
    - 'fallback': Curated topics
    
    Usage tracking:
    - Incremented on use
    - Analytics queries
    
    Indexed on:
    - category
    - used_count
end note

note right of progress
    **User learning progress**
    
    Tracks:
    - Current CEFR level
    - Interest topics
    - Historical feedback
    
    Used for:
    - Personalized learning
    - Progress reports
    - Trend analysis
end note

note right of feedback
    **LLM-generated feedback**
    
    Contains:
    - Real-time corrections
    - Grammar feedback
    - Vocabulary tips
    - CEFR assessments
    
    JSON fields store
    structured feedback data
end note

note left of users
    **User profile information**
    
    Future enhancement:
    - Authentication
    - Profile management
    - Progress dashboard
    
    Currently users are
    identified anonymously
    per session
end note

' Cardinality notes
note as N1
    **Cardinality:**
    
    • One session has many participants (0..*)
    • One session generates many feedback items (0..*)
    • One participant receives many feedback items (0..*)
    • One topic is used in many sessions (0..*)
    • One user has one progress record (1..1)
    • One user participates in many sessions (0..*)
end note

@enduml
